@@ -2,6 +2,8 @@
 #include "..\Parsers\Object.h"
 #include "CK2Building.h"
 #include "CK2Barony.h"
+#include "CK2Title.h"
+#include "CK2Character.h"
 #include "..\Log.h"
 
 
@@ -17,6 +19,10 @@ CK2Province::CK2Province(Object* obj, map<string, CK2Title*> titles, const CK2Bu
 		if (key[0] == 'b')
 		{
 			CK2Barony* newBarony = new CK2Barony( leaves[i], titles[key], this, buildingFactory, religionGroupMap, cultureGroupMap);
+			if (newBarony->getTitle()->getHolder()->getCapitalString() == newBarony->getTitle()->getTitleString())
+			{
+				newBarony->getTitle()->getHolder()->setCapital(this);
+			}
 			baronies.push_back(newBarony);
 		}
 	}
